# Ethereum-transaction-with-web3js

./: .gitignore  Bykovets Valeriia_sendTrans.js  CryptoTask1.js  Derkach_transaction_task1.py  HW_sendTransaction.js  Kazistov.js  Lab2_YesypovaDaria.js  Oleksandr_Kotkov_hw1.js  Pipfile  README.md  SofiiaBoldeskul.py  SofiiaBoldeskulETH.py  Sydorova_transaction_eth_task1.py  Task1TransactionWithData.js  Transaction.js  TransactionCode  TransactionWeb3.js  TransactionWithData.js  app.py  eth-transaction..js  eth1_transaction.html  fileName.js  index.js  main.js  main.py  making-trans.js  one.py  package-lock.json  package.json  pavlo_vlasenko.js  pyproject.toml  send.js  sendMatic.js  sendTx.js  transaction  transaction.js  transaction.py  transaction.txt  transaction_web3js.js  web3.js
Anastasiia_Parkhomenko_transaction/: .env  transaction.js
first/: .env.example  task1.py
lab1_shemet/: shemet_lab1.py
src/: environment.js  main.js  provider.js
src/domain/: account.js  index.js  transaction.js
